test/sema/mismatching-binary-operands.delta.output
mismatching-binary-operands.delta:5:17: error: invalid operands 'int' and 'bool' to '+'
    var foo = 4 + false;
                ^
