test/sema/mismatching-binary-operands.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:17: error: invalid operands 'int' and 'bool' to '+'
    var foo = 4 + false;
}
